--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <script src="app/libs/angular-animate/angular-animate.min.js"></script>
         <script src="app/libs/angular-aria/angular-aria.min.js"></script>
         <script src="app/libs/angular-material/angular-material.min.js"></script>
-        <script src="app/libs/chart.js/Chart.min.js"></script>
+        <script src="app/libs/moment/moment.js"></script>
+        <script src="app/libs/chart.js/dist/Chart.min.js"></script>
         <script src="app/libs/angular-chart.js/dist/angular-chart.min.js"></script>
         <script src="//unpkg.com/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
 
