--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <script src="app/controllers/UserController.js"></script>
         <script src="app/controllers/CreateController.js"></script>
         <script src="app/controllers/EditController.js"></script>
+        <script src="app/controllers/CompareController.js"></script>
         <script src="app/services/UserService.js"></script>
     </body>
 </html>
